--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -14,7 +14,7 @@ else
         {
             <div class="card m-3" style="min-width: 18rem;max-width:30.5%">
                 <div class="card-header">
-                    <h3>@employee.FirstName @employee.lastName</h3>
+                    <h3>@employee.FirstName @employee.LastName</h3>
                 </div>
                 <img class="card-img-top imageThumbnail" src="@employee.PhotoPath" />
                 <div class="card-footer text-center">
