--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -2,6 +2,7 @@
 @inherits EmployeeListBase
 
 <h3>EmployeeList</h3>
+<h3>Selected Employees Count - @SelectedEmployeesCount</h3>
 <input type="checkbox" id="showFooter" @bind="ShowFooter"/>
 <label for="showFooter">Show Footer</label>
 @if (Employees == null)
@@ -13,7 +14,7 @@ else
     <div class="card-deck">
         @foreach (var employee in Employees)
         {
-            <DisplayEmployee Employee="employee" ShowFooter="ShowFooter"></DisplayEmployee>
+            <DisplayEmployee Employee="employee" ShowFooter="ShowFooter" OnEmployeeSelection="EmployeeSelectionChanged"></DisplayEmployee>
         }
 
     </div>
