--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -34,13 +34,15 @@
             </label>
             <div class="col-sm-10">
                 @* <InputSelect id="department" @bind-Value="Employee.DepartmentId" class="form-control"> *@
-                <InputSelect id="department" @bind-Value="DepartmentId" class="form-control">
+                @* <InputSelect id="department" @bind-Value="DepartmentId" class="form-control"> *@
+                @* InputSelect 컴포넌트가 int 에 대한 처리가 없어서 오류가 나 CustomInputSelect를 만들고 파싱 부분 오버라이딩함 *@
+                <CustomInputSelect id="department" @bind-Value="Employee.DepartmentId" class="form-control">
                     @foreach (var dept in Departments)
                     {
                         <option value="@dept.DepartmentId">@dept.DepartmentName</option>
                     }
 
-                </InputSelect>
+                </CustomInputSelect>
             </div>
         </div>
     </EditForm>
