--- a/EmployeeManagement.Web/_Imports.razor
+++ b/EmployeeManagement.Web/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.JSInterop
 @using EmployeeManagement.Web
 @using EmployeeManagement.Web.Shared
-@using ProgimTech.Components 
+@using ProgimTech.Components
+@using EmployeeManagement.Models
