--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -11,7 +11,7 @@
                 First Name
             </label>
             <div class="col-sm-10">
-                <InputText id="fitstName" class="form-contrl" placeholder="First Name" @bind-Value="Employee.FirstName" />
+                <InputText id="fitstName" class="form-control" placeholder="First Name" @bind-Value="Employee.FirstName" />
             </div>
         </div>
         <div class="form-group row">
@@ -19,7 +19,7 @@
                 Last Name
             </label>
             <div class="col-sm-10">
-                <InputText id="lastName" class="form-contrl" placeholder="Last Name" @bind-Value="Employee.LastName" />
+                <InputText id="lastName" class="form-control" placeholder="Last Name" @bind-Value="Employee.LastName" />
             </div>
         </div>
         <div class="form-group row">
@@ -27,7 +27,7 @@
                 Email
             </label>
             <div class="col-sm-10">
-                <InputText id="email" class="form-contrl" placeholder="Email" @bind-Value="Employee.Email" />
+                <InputText id="email" class="form-control" placeholder="Email" @bind-Value="Employee.Email" />
             </div>
         </div>
         <div class="form-group row">
@@ -57,8 +57,15 @@
                     {
                         <option value="@gender">@gender</option>
                     }
-
                 </InputSelect>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="dateOfBirth" class="col-sm-2 col-form-label">
+                Date Of Birth
+            </label>
+            <div class="col-sm-10">
+                <InputDate @bind-Value="Employee.DateOfBrith" class="form-control" />
             </div>
         </div>
     </EditForm>
