--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -4,7 +4,9 @@
 @inherits EditEmplyeeBase
 
     <EditForm Model="@Employee">
+        <DataAnnotationsValidator />
         <h3>Edit Employee</h3>
+        <ValidationSummary />
         <hr />
         <div class="form-group row">
             <label for="firstName" class="col-sm-2 col-form-label">
@@ -12,6 +14,7 @@
             </label>
             <div class="col-sm-10">
                 <InputText id="fitstName" class="form-control" placeholder="First Name" @bind-Value="Employee.FirstName" />
+                <ValidationMessage For="@(() => Employee.FirstName)" />
             </div>
         </div>
         <div class="form-group row">
@@ -20,6 +23,7 @@
             </label>
             <div class="col-sm-10">
                 <InputText id="lastName" class="form-control" placeholder="Last Name" @bind-Value="Employee.LastName" />
+                <ValidationMessage For="@(() => Employee.LastName)" />
             </div>
         </div>
         <div class="form-group row">
@@ -28,6 +32,7 @@
             </label>
             <div class="col-sm-10">
                 <InputText id="email" class="form-control" placeholder="Email" @bind-Value="Employee.Email" />
+                <ValidationMessage For="@(() => Employee.Email)" />
             </div>
         </div>
         <div class="form-group row">
