Edit and Update in Blazor https://www.youtube.com/watch?v=PnkUOZY_i-U&list=PL6n9fhu94yhVowClAs8-6nYnfsOTma14P&index=40

--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -3,10 +3,12 @@
 
 @inherits EditEmplyeeBase
 
-    <EditForm Model="@EditEmployeeModel" OnInvalidSubmit="HandleValidSubmit">
+@*<DataAnnotationsValidator />*@
+@* Nested Class Validate *@
+
+    <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
+        <ObjectGraphDataAnnotationsValidator />
         @*<DataAnnotationsValidator />*@
-        @* Nested Class Validate *@
-        <ObjectGraphDataAnnotationsValidator/>   
         <h3>Edit Employee</h3>
         <ValidationSummary />
         <hr />
@@ -91,8 +93,9 @@
             <label for="deptName" class="col-sm-2 col-form-label">
                 Department Name
             </label>
-            <div class="col-sm-10">
+            <div id="deptName" class="col-sm-10">
                 <InputText @bind-Value="EditEmployeeModel.Department.DepartmentName" class="form-control" />
+                <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)" />
             </div>
         </div>
 
