--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -1,4 +1,6 @@
 ﻿@page "/editemployee/{id}"
+@page "/editemployee"
+
 @using ProgimTech.Components
 
 @inherits EditEmplyeeBase
@@ -6,98 +8,98 @@
 @*<DataAnnotationsValidator />*@
 @* Nested Class Validate *@
 
-    <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
-        <ObjectGraphDataAnnotationsValidator />
-        @*<DataAnnotationsValidator />*@
-        <h3>Edit Employee</h3>
-        <ValidationSummary />
-        <hr />
-        <div class="form-group row">
-            <label for="firstName" class="col-sm-2 col-form-label">
-                First Name
-            </label>
-            <div class="col-sm-10">
-                <InputText id="fitstName" class="form-control" placeholder="First Name" @bind-Value="EditEmployeeModel.FirstName" />
-                <ValidationMessage For="@(() => EditEmployeeModel.FirstName)" />
-            </div>
+<EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
+    @*<ObjectGraphDataAnnotationsValidator />*@
+    @*<DataAnnotationsValidator />*@
+    <h3>Edit Employee</h3>
+    <ValidationSummary />
+    <hr />
+    <div class="form-group row">
+        <label for="firstName" class="col-sm-2 col-form-label">
+            First Name
+        </label>
+        <div class="col-sm-10">
+            <InputText id="fitstName" class="form-control" placeholder="First Name" @bind-Value="EditEmployeeModel.FirstName" />
+            <ValidationMessage For="@(() => EditEmployeeModel.FirstName)" />
         </div>
-        <div class="form-group row">
-            <label for="lastName" class="col-sm-2 col-form-label">
-                Last Name
-            </label>
-            <div class="col-sm-10">
-                <InputText id="lastName" class="form-control" placeholder="Last Name" @bind-Value="EditEmployeeModel.LastName" />
-                <ValidationMessage For="@(() => EditEmployeeModel.LastName)" />
-            </div>
+    </div>
+    <div class="form-group row">
+        <label for="lastName" class="col-sm-2 col-form-label">
+            Last Name
+        </label>
+        <div class="col-sm-10">
+            <InputText id="lastName" class="form-control" placeholder="Last Name" @bind-Value="EditEmployeeModel.LastName" />
+            <ValidationMessage For="@(() => EditEmployeeModel.LastName)" />
         </div>
-        <div class="form-group row">
-            <label for="email" class="col-sm-2 col-form-label">
-                Email
-            </label>
-            <div class="col-sm-10">
-                <InputText id="email" class="form-control" placeholder="Email" @bind-Value="EditEmployeeModel.Email" />
-                <ValidationMessage For="@(() => EditEmployeeModel.Email)" />
-            </div>
+    </div>
+    <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">
+            Email
+        </label>
+        <div class="col-sm-10">
+            <InputText id="email" class="form-control" placeholder="Email" @bind-Value="EditEmployeeModel.Email" />
+            <ValidationMessage For="@(() => EditEmployeeModel.Email)" />
         </div>
-        @* Confirm Email *@
-        <div class="form-group row">
-            <label for="confirmEmail" class="col-sm-2 col-form-label">
-                Confirm Email
-            </label>
-            <div class="col-sm-10">
-                <InputText id="confirmEmail" class="form-control" placeholder="Confirl Email" @bind-Value="EditEmployeeModel.ConfirmEmail" />
-                <ValidationMessage For="@(() => EditEmployeeModel.ConfirmEmail)" />
-            </div>
+    </div>
+    @* Confirm Email *@
+    <div class="form-group row">
+        <label for="confirmEmail" class="col-sm-2 col-form-label">
+            Confirm Email
+        </label>
+        <div class="col-sm-10">
+            <InputText id="confirmEmail" class="form-control" placeholder="Confirl Email" @bind-Value="EditEmployeeModel.ConfirmEmail" />
+            <ValidationMessage For="@(() => EditEmployeeModel.ConfirmEmail)" />
         </div>
+    </div>
 
 
-        <div class="form-group row">
-            <label for="department" class="col-sm-2 col-form-label">
-                Department
-            </label>
-            <div class="col-sm-10">
-                @* <InputSelect id="department" @bind-Value="Employee.DepartmentId" class="form-control"> *@
-                @* <InputSelect id="department" @bind-Value="DepartmentId" class="form-control"> *@
-                @* InputSelect 컴포넌트가 int 에 대한 처리가 없어서 오류가 나 CustomInputSelect를 만들고 파싱 부분 오버라이딩함 *@
-                <CustomInputSelect id="department" @bind-Value="EditEmployeeModel.DepartmentId" class="form-control">
-                    @foreach (var dept in Departments)
-                    {
-                        <option value="@dept.DepartmentId">@dept.DepartmentName</option>
-                    }
+    <div class="form-group row">
+        <label for="department" class="col-sm-2 col-form-label">
+            Department
+        </label>
+        <div class="col-sm-10">
+            @* <InputSelect id="department" @bind-Value="Employee.DepartmentId" class="form-control"> *@
+            @* <InputSelect id="department" @bind-Value="DepartmentId" class="form-control"> *@
+            @* InputSelect 컴포넌트가 int 에 대한 처리가 없어서 오류가 나 CustomInputSelect를 만들고 파싱 부분 오버라이딩함 *@
+            <CustomInputSelect id="department" @bind-Value="EditEmployeeModel.DepartmentId" class="form-control">
+                @foreach (var dept in Departments)
+                {
+                    <option value="@dept.DepartmentId">@dept.DepartmentName</option>
+                }
 
-                </CustomInputSelect>
-            </div>
+            </CustomInputSelect>
         </div>
-        <div class="form-group row">
-            <label for="gender" class="col-sm-2 col-form-label">
-                Gender
-            </label>
-            <div class="col-sm-10">
-                <InputSelect @bind-Value="EditEmployeeModel.Gender" class="form-control">
-                    @foreach (var gender in Enum.GetValues(typeof(Gender)))
-                    {
-                        <option value="@gender">@gender</option>
-                    }
-                </InputSelect>
-            </div>
+    </div>
+    <div class="form-group row">
+        <label for="gender" class="col-sm-2 col-form-label">
+            Gender
+        </label>
+        <div class="col-sm-10">
+            <InputSelect @bind-Value="EditEmployeeModel.Gender" class="form-control">
+                @foreach (var gender in Enum.GetValues(typeof(Gender)))
+                {
+                    <option value="@gender">@gender</option>
+                }
+            </InputSelect>
         </div>
-        <div class="form-group row">
-            <label for="dateOfBirth" class="col-sm-2 col-form-label">
-                Date Of Birth
-            </label>
-            <div class="col-sm-10">
-                <InputDate @bind-Value="EditEmployeeModel.DateOfBrith" class="form-control" />
-            </div>
+    </div>
+    <div class="form-group row">
+        <label for="dateOfBirth" class="col-sm-2 col-form-label">
+            Date Of Birth
+        </label>
+        <div class="col-sm-10">
+            <InputDate @bind-Value="EditEmployeeModel.DateOfBrith" class="form-control" />
         </div>
-        <div class="form-group row">
-            <label for="deptName" class="col-sm-2 col-form-label">
-                Department Name
-            </label>
-            <div id="deptName" class="col-sm-10">
-                <InputText @bind-Value="EditEmployeeModel.Department.DepartmentName" class="form-control" />
-                <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)" />
-            </div>
+    </div>
+    @*<div class="form-group row">
+        <label for="deptName" class="col-sm-2 col-form-label">
+            Department Name
+        </label>
+        <div id="deptName" class="col-sm-10">
+            <InputText @bind-Value="EditEmployeeModel.Department.DepartmentName" class="form-control" />
+            <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)" />
         </div>
+    </div>*@
 
-        <button class="btn btn-primary" type="submit">Submit</button>
-    </EditForm>
+    <button class="btn btn-primary" type="submit">Submit</button>
+</EditForm>
