Force reload blazor component https://www.youtube.com/watch?v=p6gdokBj34w&list=PL6n9fhu94yhVowClAs8-6nYnfsOTma14P&index=42

--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -3,7 +3,7 @@
 
 @using ProgimTech.Components
 
-@inherits EditEmplyeeBase
+@inherits EditEmployeeBase
 
 @*<DataAnnotationsValidator />*@
 @* Nested Class Validate *@
@@ -11,7 +11,7 @@
 <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
     @*<ObjectGraphDataAnnotationsValidator />*@
     @*<DataAnnotationsValidator />*@
-    <h3>Edit Employee</h3>
+    <h3>@PageHeaderText</h3>
     <ValidationSummary />
     <hr />
     <div class="form-group row">
