--- a/EmployeeManagement.Web/Pages/DisplayEmployee.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployee.razor
@@ -19,6 +19,9 @@
                 </button>
             </div>
         }
-
-
     </div>
+
+<Confirm ConfirmationChanged="ConfirmDelete_Click" @ref="DeleteConfirmation"
+         ConfirmationMessage=@($"Are you sure you want to delete \"{Employee.FirstName}\"") ></Confirm>
+
+@* ref는 뭐지?? *@
