--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -104,7 +104,10 @@
     <button class="btn btn-primary" type="submit">Submit</button>
     @if (EditEmployeeModel.EmployeeId > 0)
     {
-        <button class="btn btn-danger" type="submit" @onclick="Delete_Click">Delete</button>
+        <button class="btn btn-danger" type="button" @onclick="Delete_Click">Delete</button>
     }
 
 </EditForm>
+
+<Confirm @ref="DeleteConfirmation" ConfirmationChanged="ConfirmDelete_Click" 
+         ConfirmationMessage=@($"Are you sure you want to delete \"{EditEmployeeModel.FirstName}\"")></Confirm>
