Parent -> Child 파라메터(속성) 우선순위 Arbitrary attributes and parameters in Blazor https://www.youtube.com/watch?v=gClG243kn1o&list=PL6n9fhu94yhVowClAs8-6nYnfsOTma14P&index=47

--- a/EmployeeManagement.Web/Pages/ChildComponent.razor
+++ b/EmployeeManagement.Web/Pages/ChildComponent.razor
@@ -1,17 +1,19 @@
 ﻿@*<input id="firstName" required="@Required" maxlength="@Maxlength" size="@Size"
        placeholder="@Placeholder"/>*@
 
-<input id="firstName" @attributes="InputAttributes" value="@Value" />
+@* Parent에서 던져주는 속성값을 적용하기  placeholder가 attributes 보다 앞에 있어야함 *@
+<input id="firstName" placeholder="Default Value" @attributes="InputAttributes"    value="@Value" />
+
 
 @code{
-    [Parameter]
+    [Parameter(CaptureUnmatchedValues = true)]
     public Dictionary<string, object> InputAttributes { get; set; } =
         new Dictionary<string, object>
         {
-            { "required", "required" },
-            { "placeholder", "Child Component Placeholder" },
-            { "size", "100" },
-            { "maxlength", "15" }
+            //{ "required", "required" },
+            //{ "placeholder", "Child Component Placeholder" },
+            //{ "size", "100" },
+            //{ "maxlength", "15" }
         };
 
     [Parameter]
