--- a/EmployeeManagement.Web/Pages/CascadingValueParam/GrandChildCascadingComponent.razor
+++ b/EmployeeManagement.Web/Pages/CascadingValueParam/GrandChildCascadingComponent.razor
@@ -1,10 +1,12 @@
 ﻿
 @using EmployeeManagement.Web.Pages.CascadingValueParam
 
-<h3 style="@ElementStyle">GrandChildCascadingComponent</h3>
+<h3 style="@ElementStyle; @H1Border">GrandChildCascadingComponent</h3>
 
 
 @code {
-    [CascadingParameter]
+    [CascadingParameter(Name = "ColorStyle")]
     public string ElementStyle { get; set; }
+    [CascadingParameter(Name = "BorderStyle")]
+    public string H1Border { get; set; }
 }
